# dvbapp2-gui

./: Navigation.py  configure.ac  mytest.py  skin.py
data/: Makefile.am  keymap.xml  menu.xml  setup.xml  startwizard.xml
data/display255/: skin_display.xml  skin_display_picon.xml
lib/python/: Makefile.am
lib/python/Components/: Lcd.py  OnlineUpdateCheck.py  SetupDevices.py  SystemInfo.py  UsageConfig.py
lib/python/Plugins/Extensions/: Makefile.am
lib/python/Plugins/Extensions/IniMyTube/: MyTubeService.py
lib/python/Plugins/Extensions/magicBoot/: Makefile.am  Makefile.am~  __init__.py  ex_init.py  magicboot.mvi  magicboot.py  magicboot.py~  nandsim_360  nandsim_387  plugin.py
lib/python/Plugins/Extensions/magicFaq/: Makefile.am  plugin.py
lib/python/Plugins/Extensions/magicPermanentClock/: Makefile.am  plugin.py
lib/python/Plugins/Extensions/magicstarFaq/: Makefile.am  plugin.py
lib/python/Plugins/Extensions/magicstarPermanentClock/: Makefile.am  plugin.py
lib/python/Screens/: About.py  CCcamInfo.py  ChannelSelection.py  InfoBar.py  InfoBarGenerics.py  InstallWizard.py  MovieSelection.py  PluginBrowser.py  Satconfig.py  ScanSetup.py  Standby.py  Timershift.py  VirtualKeyBoard.py  magic_wizard.py  magicstar_wizard.py
main/: bsod.cpp  enigma.cpp
po/: ar.po  bg.po  ca.po  cs.po  da.po  de.po  el.po  en.po  en_GB.po  es.po  et.po  fa.po  fi.po  fr.po  fy.po  he.po  hr.po  hu.po  is.po  it.po  ku.po  lt.po  lv.po  nb.po  nl.po  no.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sk.po  sl.po  sr.po  sv.po  th.po  tr.po  uk.po
tools/: enigma2.sh.in
(+45 files in other folders)
